--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,9 @@
 
 a{
     text-decoration: none;
-    color:#000;
+    color:#dfdfdf;
 }
+
 
 #logo img{
     width: 40px;
@@ -17,10 +18,16 @@ a{
 
 }
 
+body{
+    background-image:url('http://wallpaperus.org/wallpapers/05/206/gaussian-blur-1920x1080-wallpaper-882319.jpg');
+    color:#dfdfdf;
+}
 header{
+    /*
     border-bottom-color: #dfdfdf;
     border-bottom-style: solid;
     border-width: 1px;
+    */
 }
 
 nav ul{
@@ -43,17 +50,24 @@ nav ul li a{
 }
 
 nav ul li.active {
-    border-bottom:#000;
+    border-bottom:#dfdfdf;
     border-bottom-style: solid;
     border-width:3px;
 }
 
 nav ul li:hover {
-    border-bottom:#ccc;
+    border-bottom:#fff;
     border-bottom-style: solid;
     border-width:3px;
+
 }
 
+.post-content{
+    
+    border-radius:5px;
+    padding:15px;
+    background-color:rgba(0,0,0,0.2);
+}
 
 section {
     margin-top:20px;
@@ -61,6 +75,10 @@ section {
 
 footer{
     margin-top:30px;
-    background-color:#ccc;
+    /*
+    border-top-color: #dfdfdf;
+    border-top-style: solid;
+    border-width: 1px;
+    */
 }
 
