--- a/style.css
+++ b/style.css
@@ -1,22 +1,38 @@
 @import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
+@import url(http://fonts.googleapis.com/css?family=Megrim:400);
+
 
 body{
 	font-family: 'Inconsolata' ;
 	font-weight:400;
+	background:url(images/bg.png);
+	/*
 	background:rgba(0,0,0,0.1);
 	color: rgba(0,0,0,0.6);
+	*/
+	color: rgb(255,255,255);
 }
 
 h4{
 	font-weight:700;
 	font-size:16px;
 	margin-bottom:0px;
+	/*
 	color: rgba(0,0,0,0.7);
+	*/
+	color: rgb(255,255,255);
 }
 
+h2{
+	font-family: 'Megrim' ;
+	font-size:28px;
+	font-weight:400;
+	color: rgb(255,255,255);
+	/*
+	color: rgba(0,0,0,0.9);
+	*/
 
-hr{
-	border-color: rgba(0,0,0,0.6);
+	margin-bottom:0px;
 }
 
 .nav a:hover{
@@ -36,17 +52,17 @@ hr{
 }
 
 a:link {
-    color: rgba(0,0,0,0.6);
+    color: rgb(255,255,255);
 }
 
 /* visited link */
 a:visited {
-    color: rgba(0,0,0,0.6);
+    color: rgb(255,255,255);
 }
 
 /* mouse over link */
 a:hover {
-    color: rgba(0,0,0,0.6);
+    color: rgb(255,255,255);
     text-decoration:none;
 }
 
@@ -55,7 +71,7 @@ a.active{
 }
 /* selected link */
 a:active {
-    color: rgba(0,0,0,0.6);
+    color: rgb(255,255,255);
 }
 
 .nav {
@@ -63,7 +79,7 @@ a:active {
 }
 
 .project{
-	background:rgba(255,255,255,0.5);
+	background:rgba(255,255,255,0.2);
 	margin-bottom:30px;
 }
 
